hw4/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: muffin-app-mtls
  namespace: muffin-app
spec:
  mtls:
    mode: STRICT
