hw4/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: muffin-currency-access
  namespace: muffin-app
spec:
  selector:
    matchLabels:
      app: muffin-currency
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/muffin-app/sa/muffin-wallet-sa
